--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,20 +5,15 @@
     <%- include("./partials/nav.ejs") %>
 
     <div class="about content">
-      <h2>About Us</h2>
-      <p>This is a demo blog website with dummy data..</p>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia
-        quibusdam quaerat illo a modi tenetur ut blanditiis, illum quo
-        consectetur recusandae excepturi natus impedit rem, tempora cum
-        fuga quae in.
+      <h1 style="color: teal;">About Us</h1>
+      <p style="font-size: 1.5em;">
+        Blogo was created to post fully customizable blog using html,
+        css and js</br>
+        It uses nodejs as the backend and mongodb as a database,</br>
+        using mongoose data is sent and fetched from database.</br>
+        Authentication is implemented using auth0.
       </p>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia
-        quibusdam quaerat illo a modi tenetur ut blanditiis, illum quo
-        consectetur recusandae excepturi natus impedit rem, tempora cum
-        fuga quae in.
-      </p>
+      <p>Created by Naveen Kala</p>
     </div>
 
     <%- include("./partials/footer.ejs") %>
