--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,21 +1,27 @@
 <html lang="en">
-<%- include("./partials/head.ejs") %>
+  <%- include("./partials/head.ejs") %>
 
-<body>
-  <%- include("./partials/nav.ejs") %>
+  <body>
+    <%- include("./partials/nav.ejs") %>
+    <h1 class="text-center mb-4" style="color: teal">New Blog</h1>
 
-  <div class="create-blog content">
-    <form action="/blogs" method="POST">
-      <label for="title">Blog title:</label>
-      <input type="text" id="title" name="title" required>
-      <label for="snippet">Blog snippet:</label>
-      <input type="text" id="snippet" name="snippet" required>
-      <label for="body">Blog body:</label>
-      <textarea id="body" name="body" required></textarea>
-      <button>Submit</button>
-    </form>
-  </div>
+    <div class="create-blog content">
+      <form action="/blogs" method="POST">
+        <label for="title"><h4>Title</h4></label>
+        <input type="text" id="title" name="title" required />
+        <label for="snippet"><h4>Snippet</h4></label>
+        <input type="text" id="snippet" name="snippet" required />
+        <label for="body"><h4>Body</h4></label>
+        <textarea
+          style="white-space: pre-wrap"
+          id="body"
+          name="body"
+          required
+        ></textarea>
+        <button>Submit</button>
+      </form>
+    </div>
 
-  <%- include("./partials/footer.ejs") %>
-</body>
+    <%- include("./partials/footer.ejs") %>
+  </body>
 </html>
