--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,6 +4,13 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   />
+  <link rel="icon" href="/icon.gif" type="image/gif" />
   <link rel="stylesheet" href="/styles.css" />
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+    crossorigin="anonymous"
+  />
   <title>Blogo | <%= title %></title>
 </head>
