--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,12 +1,42 @@
-<nav>
-  <div class="site-title">
-    <a href="/"><h1>Blogo</h1></a>
-    <p>by Naveen Kala</p>
+<nav class="mb-20 navbar navbar-expand-md bg-dark navbar-dark">
+  <!-- Brand -->
+  <a class="navbar-brand" href="/">Blogo</a>
+
+  <!-- Toggler/collapsibe Button -->
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#collapsibleNavbar"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <!-- Navbar links -->
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav ml-auto" id="navbar-items">
+      <li class="nav-item">
+        <a class="nav-link" href="/">Blogs</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/about">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/blogs/create">New Blog</a>
+      </li>
+      <% if(isLoggedIn) { %>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Logout</a>
+        </li>
+        <%} else {%>
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+        <%}%>
+
+    </ul>
   </div>
-  <ul>
-    <li><a href="/">Blogs</a></li>
-    <li><a href="/login">Login</a></li>
-    <li><a href="/about">About</a></li>
-    <li><a href="/blogs/create">New Blog</a></li>
-  </ul>
 </nav>
+</br>
+</br>
